-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.5.0
-
None
For Gerrit Dashboard: QTCREATORBUG-14874 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
122967,3 | Clang: Fix showing signature tooltips for functions | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
122991,1 | Clang: Fix showing signature tooltips for functions | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |